// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaritalStatusField /> matches snapshot 1`] = `
<select
  class="sc-idOhPF gSNtny"
  id="maritalStatusField"
  name="name"
  type="text"
>
  <option
    class="sc-hHftDr bhxQtR"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="unmarried"
  >
    panna/kawaler
  </option>
  <option
    value="married"
  >
    mężatka/żonaty
  </option>
  <option
    value="divorced"
  >
    rozwiedziona/rozwiedziony
  </option>
  <option
    value="widower"
  >
    wdowa/wdowiec
  </option>
  <option
    value="with_parents"
  >
    z rodzicami
  </option>
</select>
`;

exports[`<MaritalStatusField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="maritalStatusField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="unmarried"
          >
            panna/kawaler
          </option>
          <option
            value="married"
          >
            mężatka/żonaty
          </option>
          <option
            value="divorced"
          >
            rozwiedziona/rozwiedziony
          </option>
          <option
            value="widower"
          >
            wdowa/wdowiec
          </option>
          <option
            value="with_parents"
          >
            z rodzicami
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<MaritalStatusField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF gSNtny"
          id="maritalStatusField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="unmarried"
          >
            panna/kawaler
          </option>
          <option
            value="married"
          >
            mężatka/żonaty
          </option>
          <option
            value="divorced"
          >
            rozwiedziona/rozwiedziony
          </option>
          <option
            value="widower"
          >
            wdowa/wdowiec
          </option>
          <option
            value="with_parents"
          >
            z rodzicami
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<MaritalStatusField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="maritalStatusField"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="unmarried"
          >
            panna/kawaler
          </option>
          <option
            value="married"
          >
            mężatka/żonaty
          </option>
          <option
            value="divorced"
          >
            rozwiedziona/rozwiedziony
          </option>
          <option
            value="widower"
          >
            wdowa/wdowiec
          </option>
          <option
            value="with_parents"
          >
            z rodzicami
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
